--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "element-china-area-data": "^3.1.0",
     "element-ui": "^2.0.0",
     "font-awesome": "^4.7.0",
+    "jr-qrcode": "^1.1.4",
+    "lib-flexible": "^0.3.2",
+    "node-sass": "^4.12.0",
     "npm": "^5.10.0",
     "nprogress": "^0.2.0",
+    "number-precision": "^1.5.0",
     "vue": "^2.2.2",
+    "vue-baidu-map": "^0.21.22",
+    "vue-clipboard2": "^0.3.1",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "^2.3.0",
     "vuex": "^2.0.0-rc.6"
   },
@@ -27,8 +34,8 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
     "babel-polyfill": "^6.16.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
@@ -44,13 +51,12 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
     "json-loader": "^0.5.4",
     "mockjs": "^1.0.1-beta3",
-    "node-sass": "^4.5.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.0.0",
+    "px2rem-loader": "^0.1.9",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.0",
     "semver": "^5.3.0",
@@ -60,6 +66,7 @@
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
     "webpack-merge": "^2.6.1"
