--- a/static/config.json
+++ b/static/config.json
@@ -1,4 +1,4 @@
 {
   "mobileUrl":"http://www.xbjg.org/xibin-mobile/%23/",
-  "reportUrl":"http://118.89.37.186:8081/xibin/report/report.shtml"
+  "reportUrl":"http://118.89.37.186:8081/xibin/report/"
 }
