--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "clipboard-polyfill": "^4.0.1",
     "echarts": "^3.3.2",
     "element-china-area-data": "^3.1.0",
     "element-ui": "^2.0.0",
